--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Hello World</title>
+<link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Hello World</h1>
+<p>This is my first project</p>
+<img src="images/favicon.png" alt="Flowers in Chania">
 
 </body>
 </html>
