--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello World</h1>
 <p>This is my first project</p>
-<img src="images/favicon.png" alt="Flowers in Chania">
+<p><a href="https://www.Youtube.com/"><img src="images/favicon.png" ></a></p>
 
 </body>
 </html>
