--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello World</h1>
 <p>This is my first project</p>
-<p><a href="https://www.Youtube.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
+<p><a href="https://www.Youtube.com/"><img src="images/favicon.pn" alt="My First Web Link"></a></p>
 
 </body>
 </html>
