--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World</title>
+<title>Hello World Ying</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
