--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hello World</h1>
+<h1>Hello World Ying</h1>
 <p>This is my first project</p>
 <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
