--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p>This is my first project</p>
 <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/EBleyhEdz5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
