--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Hello World Ying</title>
-<link rel="icon" type="image/x-icon" href="images/favicon.png">
+  <title>Hello World Ying</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<h1>Hello World Ying</h1>
-<p>This is my first project</p>
-<p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
+  <h1>Hello World Ying</h1>
+  <p>This is my first project</p>
+  <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/EBleyhEdz5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
