--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <p>This is my first project</p>
   <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
-  <div class="videoWrapper">
+  <p align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EBleyhEdz5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </div>
+  </p>
   <div class="container">
     <h1>FormSubmit Demo to mohxng</h1>
     <form target="_blank" action="https://formsubmit.co/mohxng@gmail.com" method="POST">
