--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>This is my first project</p>
   <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
+  <p align="center">My First Embded Video</p>
   <p align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EBleyhEdz5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </p>
