--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <h1>Hello World Ying</h1>
-  <p>This is my first project</p>
+  <p>This is my first link</p>
   <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
 
   <p align="center">My First Embeded Video</p>
