--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-<!DOCTYPE html>
+<!doctyp<img src="Screen Shot 2023-05-12 at 1.48.31 PM.png" width="281" height="228" alt=""/>
 <html>
-
 <head>
-  <title>Hello World Ying</title>
-  <link rel="icon" type="image/x-icon" href="images/favicon.png">
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<title>Website</title>
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+	<header><a href="Shop.html"><img src="images/Screen Shot 2023-05-18 at 9.02.13 AM.png" width="187" height="127"/></a>
+		
+		<a href="Aboutus.html"><img src="images/Screen Shot 2023-05-18 at 9.04.57 AM.png" width="196" height="129"/></a></header>
+	
+	<h1>The Glow Recipe</h1>
+	<br>
+	
+	<h2> We create fruit-forward, pure formulations for skin that glows. We think that when we work together, we shine even brighter, which is why we're thrilled to have you join our community of people who value diversity, individuality, and sustainability.</h2>
+	
+	<p><br>
+	  
+	  
+ <a href="https://www.glowrecipe.com/search?q=*dry+skin+saver*"><img src="images/Screen Shot 2023-05-12 at 1.48.11 PM.png" width="339" height="287" alt=""/></a>
+	  
+<a href="https://www.glowrecipe.com/search?q=*pore+tightening*"><img src="images/Screen Shot 2023-05-12 at 1.48.31 PM.png" width="347" height="287" alt=""/></a>
+	
+	<img src="Screen Shot 2023-05-12 at 1.51.18 PM.png" width="428" height="288" alt=""/>
+	
+	<img src="Screen Shot 2023-05-18 at 8.33.02 AM.png" width="365" height="290" alt=""/>
+	
+<a href="https://www.glowrecipe.com/products/fruit-babies-best-sellers-kit?_pos=1&_sid=51338c550&_ss"=r><img src="images/Screen Shot 2023-05-18 at 8.34.53 AM.png" width="326" height="287" alt=""/></a>
+	
+	<a href="https://www.glowrecipe.com/products/pore-oil-control-kit"><img src="images/Screen Shot 2023-05-18 at 8.36.22 AM.png" width="280" height="286" alt=""/></a>
+		
+		
 
-  <h1>Hello World Ying</h1>
-  <p>This is my first link</p>
-  <p><a href="https://www.microsoft.com/"><img src="images/favicon.png" alt="My First Web Link"></a></p>
-
-  <p align="center">My First Embeded Video</p>
-  <p align="center">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/EBleyhEdz5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </p>
-  <div class="container">
-    <h1>FormSubmit Demo to mohxng</h1>
-    <form target="_blank" action="https://formsubmit.co/mohxng@gmail.com" method="POST">
-      <div class="form-group">
-        <div class="form-row">
-          <div class="col">
-            <input type="text" name="name" class="form-control" placeholder="Full Name" required>
-          </div>
-          <div class="col">
-            <input type="email" name="email" class="form-control" placeholder="Email Address" required>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
-    </form>
-  </div>
+		
 
 </body>
 </html>
