--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	  
 <a href="https://www.glowrecipe.com/search?q=*pore+tightening*"><img src="images/Screen Shot 2023-05-12 at 1.48.31 PM.png" width="347" height="287" alt=""/></a>
 	
-	<img src="Screen Shot 2023-05-12 at 1.51.18 PM.png" width="428" height="288" alt=""/>
+	<img src="images/Screen Shot 2023-05-12 at 1.51.18 PM.png" width="428" height="288" alt=""/>
 	
-	<img src="Screen Shot 2023-05-18 at 8.33.02 AM.png" width="365" height="290" alt=""/>
+	<img src="images/Screen Shot 2023-05-18 at 8.33.02 AM.png" width="365" height="290" alt=""/>
 	
 <a href="https://www.glowrecipe.com/products/fruit-babies-best-sellers-kit?_pos=1&_sid=51338c550&_ss"=r><img src="images/Screen Shot 2023-05-18 at 8.34.53 AM.png" width="326" height="287" alt=""/></a>
 	
