--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     	<th>Description</th>
   	</tr>
 	<tr>
-    	<td>< a href="https://www.glowrecipe.com/search?q=*pore+tightening+*"><img src="images/poretight.png"></a></td>
+    	<td><a href="https://www.glowrecipe.com/search?q=*pore+tightening+*"><img src="images/poretight.png"/></a></td>
     	<td>An essential part of any good skin-care routine, toners help prep and plump skin to readily absorb the rest of your routine. Our innovative formula contains a balance of hydrating ingredients and pore-tightening actives to equally minimize the look of pores and hydrate skin</td>
   	</tr>
 	<tr>
