--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     	<td>An essential part of any good skin-care routine, toners help prep and plump skin to readily absorb the rest of your routine. Our innovative formula contains a balance of hydrating ingredients and pore-tightening actives to equally minimize the look of pores and hydrate skin</td>
   	</tr>
 	<tr>
-    	<td>Dry skin</td>
+    	<td><a href="https://www.glowrecipe.com/search?q=*pore+tightening+*"><img src="images/skinsaver.png"/></a></td>
     	<td> Help to treat texture and breakouts over time with this never sticky, pillowy watergel textured serum. Powered by our 10% Clarity Acid Complex™–a special blend of 2% salicylic acid & mandelic acid (AHA+BHA), strawberry, azelaic acid, and succinic acid–this serum gently smooths texture, clears breakouts, and refines pores, while calming skin. </td>
 	</tr> 
 	<tr> 
-    	<td> Fruit babies </td>
+    	<td> <a href="https://www.glowrecipe.com/products/fruit-babies-best-sellers-kit?_pos=1&_sid=819c4ea9e&_ss=r"><img src="images/fruitbabies.png"/></a></td>
     	<td> This midi-size set of bestsellers, including the bestselling Watermelon Niacinamide Dew Drops, harnesses the power of clinically effective actives—PHA, BHA, ceramides, and hyaluronic acid—to visibly tighten pores, smooth texture, soothe, and hydrate for glowing skin.</td>
 	</tr>
  	<tr>
-		<td>  Pore and oil control kit </td>
+		<td><a href="https://www.glowrecipe.com/products/pore-oil-control-kit?_pos=1&_sid=2c793501c&_ss=r"><img src="images/setss.png"/></a></td>
 		<td> Everyone has pores, but sometimes they can feel congested and need a good deep cleanse. This curated kit has everything you need to help visibly minimize the look of pores while giving you your smoothest skin yet!</td>
 	</tr>
 </table>
