--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<header><a href="Shop.html"><img src="images/Screen Shot 2023-05-18 at 9.02.13 AM.png" width="187" height="127"/></a>
+	<header><a href="Shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
 		
-		<a href="Aboutus.html"><img src="images/Screen Shot 2023-05-18 at 9.04.57 AM.png" width="196" height="129"/></a></header>
+		<a href="Aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a></header>
 	
 	<h1>The Glow Recipe</h1>
 	<br>
