--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!doctyp<img src="Screen Shot 2023-05-12 at 1.48.31 PM.png" width="281" height="228" alt=""/>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Website</title>
+<title>Glow Recipe</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<header><a href="Shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
-		
+<header>
+		<a href="Shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
 		<a href="Aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a></header>
 	
 	<h1>The Glow Recipe</h1>
