--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
 <header>
-		<a href="Shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
-		<a href="Aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a></header>
+		<a href="shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
+		<a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
+</header>
 	
 	<h1>The Glow Recipe</h1>
 	<br>
