--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </table>
 
 <div class="container">
-    <h1>Contact Us/h1>
+    <h1>Contact Us</h1>
     <form target="_blank" action="https://formsubmit.co/yuying2007@gmail.com" method="POST">
       <div class="form-group">
         <div class="form-row">
