--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="container">
     <h1>Contact Us</h1>
-    <form target="_blank" action="https://formsubmit.co/yuying2007@gmail.com" method="POST">
+    <form target="_blank" action="https://formsubmit.co/yuyingng2007@gmail.com" method="POST">
       <div class="form-group">
         <div class="form-row">
           <div class="col">
