--- a/aboutus.html
+++ b/aboutus.html
@@ -1,9 +1,8 @@
-<!doctyp<img src="../Desktop/Screen Shot 2023-05-12 at 1.48.31 PM.png" width="281" height="228" alt=""/>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Website</title>
-<link href="CSS File Purr.css" rel="stylesheet" type="text/css">
+<title>Glow Recipe</title>
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
