--- a/aboutus.html
+++ b/aboutus.html
@@ -6,9 +6,13 @@
 </head>
 
 <body>
-	<header><a href="Untitled-2.html"><img src="home.png" width="194" height="108"/></a>
+	<header>
+		
+		<a href="index.html"><img src="home.png" width="194" height="108"/></a>
 	
-	<a href="Shop.html"><img src="Screen Shot 2023-05-18 at 9.02.13 AM.png" width="200" height="110"/></a></header>
+	<a href="Shop.html"><img src="shopnow.png" width="200" height="110"/></a>
+
+</header>
 	
 
 <h1>About Us </h1>
