--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
 	<h4> Our company was founded in 2014 by Christine Chang and Sarah Lee, but at first it was a curation of other K-beauty products imported from Seoul to soft launch smaller brands into the USA.</h4>
 	
 	
-<p><img src="Screen Shot 2023-05-18 at 2.09.33 PM.png" width="350" height="246" alt=""/></p>
+<p><img src="girlbosses.png" width="350" height="246" alt=""/></p>
 <p>&nbsp;</p>
 	
 	<br>
