--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
 		
 		<a href="index.html"><img src="home.png" width="194" height="108"/></a>
 	
-	<a href="Shop.html"><img src="shopnow.png" width="200" height="110"/></a>
+	<a href="shop.html"><img src="shopnow.png" width="200" height="110"/></a>
 
 </header>
 	
@@ -24,23 +24,24 @@
 	<h4> Our company was founded in 2014 by Christine Chang and Sarah Lee, but at first it was a curation of other K-beauty products imported from Seoul to soft launch smaller brands into the USA.</h4>
 	
 	
-<p><img src="girlbosses.png" width="350" height="246" alt=""/></p>
-<p>&nbsp;</p>
+<img src="girlbosses.png" width="350" height="246" alt=""/>
+
 	
 	<br>
 	
 	<h3> 2017</h3>
 	
 <h4> The start of their own in house skin care products</h4>
-	<p><img src="Screen Shot 2023-05-18 at 2.13.14 PM.png" width="376" height="319" alt=""/></p>
-	<p>&nbsp;</p>
-<p>&nbsp;</p>
+
+
+	<img src="watermelonjar.png" width="376" height="319" alt=""/>
+
 	
 <h3> 2021</h3>
 	
 	<h4> Glow Recipe releases refillable pods to reduce CO2 emissions made with 50% post-consumer recycled materials and boasts a range of products that help everyhing from breakouts to wrinkles.</h4>
 		
-		<img src="Screen Shot 2023-05-18 at 2.16.04 PM.png" width="398" height="235" alt=""/>
+		<img src="refillpods.png" width="398" height="235" alt=""/>
 	
     <header>Content for New header Tag Goes Here</header>
     <br> 
