--- a/aboutus.html
+++ b/aboutus.html
@@ -8,9 +8,9 @@
 <body>
 	<header>
 		
-		<a href="index.html"><img src="home.png" width="194" height="108"/></a>
+		<a href="index.html"><img src="images/home.png" width="194" height="108"/></a>
 	
-	<a href="shop.html"><img src="shopnow.png" width="200" height="110"/></a>
+	<a href="shop.html"><img src="images/shopnow.png" width="200" height="110"/></a>
 
 </header>
 	
@@ -24,7 +24,7 @@
 	<h4> Our company was founded in 2014 by Christine Chang and Sarah Lee, but at first it was a curation of other K-beauty products imported from Seoul to soft launch smaller brands into the USA.</h4>
 	
 	
-<img src="girlbosses.png" width="350" height="246" alt=""/>
+	<img src="images/girlbosses.png" width="196" height="129"/></a>
 
 	
 	<br>
@@ -34,14 +34,14 @@
 <h4> The start of their own in house skin care products</h4>
 
 
-	<img src="watermelonjar.png" width="376" height="319" alt=""/>
+<img src="images/watermelonjar.png" width="196" height="129"/></a>
 
 	
 <h3> 2021</h3>
 	
 	<h4> Glow Recipe releases refillable pods to reduce CO2 emissions made with 50% post-consumer recycled materials and boasts a range of products that help everyhing from breakouts to wrinkles.</h4>
 		
-		<img src="refillpods.png" width="398" height="235" alt=""/>
+	<img src="images/refillpods.png" width="196" height="129"/></a>
 	
     <header>Content for New header Tag Goes Here</header>
     <br> 
