--- a/shop.html
+++ b/shop.html
@@ -22,15 +22,15 @@
     	<td>Wrap your body in Pink Dream Body Cream! Effortlessly smooth skin texture and hydrate your body all-at-once with the Watermelon Glow Pink Dream Body Cream. Treat your body with the same love, attention, and powerful actives found in your daily skincare routine. </td>
   	</tr>
 	<tr>
-    	<td><a href="https://www.glowrecipe.com/search?q=*pore+tightening+*"><img src="images/skinsaver.png"/></a></td>
-    	<td> Help to treat texture and breakouts over time with this never sticky, pillowy watergel textured serum. Powered by our 10% Clarity Acid Complex™–a special blend of 2% salicylic acid & mandelic acid (AHA+BHA), strawberry, azelaic acid, and succinic acid–this serum gently smooths texture, clears breakouts, and refines pores, while calming skin. </td>
+    	<td><a href="https://www.glowrecipe.com/collections/award-winners-1"><img src="images/dewdrops.png"/></a></td>
+    	<td>Take a look at our many products who have been awrded for their ability to make you glow!</td>
 	</tr> 
 	<tr> 
-    	<td> <a href="https://www.glowrecipe.com/products/fruit-babies-best-sellers-kit?_pos=1&_sid=819c4ea9e&_ss=r"><img src="images/fruitbabies.png"/></a></td>
-    	<td> This midi-size set of bestsellers, including the bestselling Watermelon Niacinamide Dew Drops, harnesses the power of clinically effective actives—PHA, BHA, ceramides, and hyaluronic acid—to visibly tighten pores, smooth texture, soothe, and hydrate for glowing skin.</td>
+    	<td> <a href="https://www.glowrecipe.com/collections/merch"><img src="images/waterbottle.png"/></a></td>
+    	<td> </td>
 	</tr>
  	<tr>
-		<td><a href="https://www.glowrecipe.com/products/pore-oil-control-kit?_pos=1&_sid=2c793501c&_ss=r"><img src="images/setss.png"/></a></td>
-		<td> Everyone has pores, but sometimes they can feel congested and need a good deep cleanse. This curated kit has everything you need to help visibly minimize the look of pores while giving you your smoothest skin yet!</td>
+		<td><a href=""><img src=""/></a></td>
+		<td></td>
 	</tr>
 </table>
