--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,9 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+	<header> <a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
+		<a href="index.html"><img src="images/home.png" width="194" height="108"/></a></header>
 	
 	<h1> Shop</h1>
 	
