--- a/shop.html
+++ b/shop.html
@@ -34,6 +34,6 @@
 	</tr>
  	<tr>
 		<td><a href="https://www.glowrecipe.com/products/watermelon-glow-pink-juice-moisturizer-jumbo?_pos=2&_sid=c1caf21a8&_ss=r"><img src="images/melonlotion.png"/></a></td>
-		<td></td>
+		<td>Formulated with star ingredients like hyaluronic acid and watermelon extract, this jumbo-sized mosturizer not only plumpd and soothes skin, but also offers long-lasting hyrdation</td>
 	</tr>
 </table>
