--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
 	</tr> 
 	<tr> 
     	<td> <a href="https://www.glowrecipe.com/collections/merch"><img src="images/waterbottle.png"/></a></td>
-    	<td>Show your support for Glow recipe through our extensive line of merch products. </td>
+    	<td>Show your support for Glow Recipe through our extensive line of merch products. </td>
 	</tr>
  	<tr>
 		<td><a href="https://www.glowrecipe.com/products/watermelon-glow-pink-juice-moisturizer-jumbo?_pos=2&_sid=c1caf21a8&_ss=r"><img src="images/melonlotion.png"/></a></td>
