--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,7 @@
 <h4> The start of their own in house skin care products</h4>
 
 
-<img src="images/watermelonjar.png"  width="664" height="368"/></a>
+<img src="images/watermelonset.png"  width="664" height="368"/></a>
 
 
 	
