--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <header>
 		<a href="shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
 		<a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
+		<a href="submitform.html"><img src="images/contact.png" width="187" height="127"/></a>
 </header>
 	
 	<h1>The Glow Recipe</h1>
