--- a/submitform.html
+++ b/submitform.html
@@ -14,9 +14,9 @@
     <div class="form-wrapper">
       <div class="form-introduction">
         <img id="fc-sumbul" src="https://carrier.formcarry.com/demo-assets/sumbul-wave.png" alt="Yo 👋" width="120">
-        <h1>Hey, there</h1>
-        <p class="description">Here is a working demo form for your <a href="https://app.formcarry.com/form/Hrhd-ancAE/setup">Contact Us</a></p>
-        <p>Submit the form down below, you'll see the message in your dashboard.</p>
+        <h1>Hi, there</h1>
+        <p class="description">Let us know how we're doing! <a href="https://app.formcarry.com/form/Hrhd-ancAE/setup">Contact Us</a></p>
+        <p>Submit the form down below, we'd love to hear how you think we could do better</p>
       </div>
 
       <section class="formcarry-container">
