--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h2> We create fruit-forward, pure formulations for skin that glows. We think that when we work together, we shine even brighter, which is why we're thrilled to have you join our community of people who value diversity, individuality, and sustainability.</h2>
 <br>
 
-<p align="center">My First Embeded Video</p>
+<p align="center">Featuring a word from our CEOs</p>
 <p align="center">
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/nEQdLo-EtzM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
 </p>
