--- a/submitform.html
+++ b/submitform.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <title>My Demo Form</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="./styles-2.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap">
 </head>
+
 <body>
   <div class="container">
     <div class="form-wrapper">
