--- a/aboutus.html
+++ b/aboutus.html
@@ -9,8 +9,11 @@
 	<header>
 		
 		<a href="index.html"><img src="images/home.png" width="194" height="108"/></a>
-	
-	<a href="shop.html"><img src="images/shopnow.png" width="200" height="110"/></a>
+		<a href="shop.html"><img src="images/shopnow.png" width="200" height="110"/></a>
+		<a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
+		<a href="submitform.html"><img src="images/contact.png" width="187" height="127"/></a>
+
+
 
 </header>
 	
