--- a/shop.html
+++ b/shop.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 
-	<header> <a href="aboutus.html"><img src="images/aboutus.png" width="194" height="108"/></a>
-		<a href="index.html"><img src="images/home.png" width="194" height="108"/></a></header>
-	
+	<header> 
+		<a href="index.html"><img src="images/home.png" width="194" height="108"/></a>
+		<a href="shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
+		<a href="aboutus.html"><img src="images/aboutus.png" width="194" height="108"/></a>
+		<a href="submitform.html"><img src="images/contact.png" width="187" height="127"/></a>
+	</header>
 	<h1> Shop</h1>
 	
 	<br>
