--- a/submitform.html
+++ b/submitform.html
@@ -8,6 +8,7 @@
   <title>Contact Us</title>
   <link rel="stylesheet" href="./styles-2.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
