--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Glow Recipe</title>
+<link rel="icon" type="image/x-icon" href="images/gricon.webp">
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
