--- a/submitform.html
+++ b/submitform.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <title>Contact Us</title>
+  <link rel="icon" type="image/x-icon" href="images/gricon.webp">
   <link rel="stylesheet" href="./styles-2.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap">
   <link href="styles.css" rel="stylesheet" type="text/css">
