--- a/submitform.html
+++ b/submitform.html
@@ -25,7 +25,7 @@
       <div class="form-introduction">
         <img id="fc-sumbul" src="https://carrier.formcarry.com/demo-assets/sumbul-wave.png" alt="Yo 👋" width="120">
         <h1>Hi, there</h1>
-        <p class="description">Let us know how we're doing! <a href="https://app.formcarry.com/form/Hrhd-ancAE/setup">Contact Us</a></p>
+        <p class="description">Let us know how we're doing!</p>
         <p>Submit the form down below, we'd love to hear how you think we could do better</p>
       </div>
 
