--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
-<header>
-		<a href="index.html"><img src="images/home.png" width="187" height="127"/></a>
-		<a href="shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
-		<a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
-		<a href="submitform.html"><img src="images/contact.png" width="187" height="127"/></a>
-</header>
+
+
+	<nav> 
+		<div class="heading"> 
+			<h1> Navigation bar</h1>
+		</div>
+		<ul> class="<nav-links></ul>
+	</nav>
+	
 	
 <h1>The Glow Recipe</h1>
 <br>
