--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 		<div class="heading"> 
 			<h1> Navigation bar</h1>
 		</div>
-		<ul> class="<nav-links></ul>
+		<ul> class="<nav-links>
+			<li> <a class="active" href="index.html">Home</a></li>
+			<li> <a href="shop.html">Shop</a></li>
+			<li> <a href="aboutus.html">About Us</a></li>
+			<li> <a href="submitform.html">Contact Us</a></li>
+		</ul>
 	</nav>
+
+	<div> </div>
 	
 	
 <h1>The Glow Recipe</h1>
