--- a/contactus.html
+++ b/contactus.html
@@ -6,3 +6,19 @@
     Age: <input name="data[age]">
     <button type="submit">Submit</button>
 </form>
+
+<script>
+    var form = document.getElementById('sheetdb-form');
+    form.addEventListener("submit", e => {
+      e.preventDefault();
+      fetch(form.action, {
+          method : "POST",
+          body: new FormData(document.getElementById("sheetdb-form")),
+      }).then(
+          response => response.json()
+      ).then((html) => {
+        // you can put any JS code here
+        alert('success')
+      });
+    });
+  </script>
