--- a/contactus.html
+++ b/contactus.html
@@ -18,7 +18,7 @@
           response => response.json()
       ).then((html) => {
         // you can put any JS code here
-        window.location.href = 'https://www.microsoft.com';
+        alert("Form Data Submitted :)")
       });
     });
   </script>
