--- a/contactus.html
+++ b/contactus.html
@@ -2,5 +2,6 @@
     <label>Your Name: <input type="text" name="Name" required /></label>
     <label>Your Email: <input type="email" name="Email" required /></label>
     <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
+    <input type="hidden" name="x-sheetmonkey-redirect" value="https://www.microsoft.com" />
     <input type="submit" value="Sign Up" />
   </form>
