--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
 
 <body>
 
-
-	<nav> 
-		<div class="heading"> 
-			<h1> Navigation bar</h1>
-		</div>
-		<ul> class="<nav-links>
-			<li> <a class="active" href="index.html">Home</a></li>
-			<li> <a href="shop.html">Shop</a></li>
-			<li> <a href="aboutus.html">About Us</a></li>
-			<li> <a href="submitform.html">Contact Us</a></li>
-		</ul>
-	</nav>
-
-	<div class="body-text"><h1>Home Page</h1></div>
+<div class="topnav">
+	<a class="active" href="index.html"><img src="images/home.png width="126" height="100" /></a>
+</div>
 	
 	
 <h1>The Glow Recipe</h1>
