--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
 <body>
 
-<div class="topnav">
-	<a class="active" href="index.html"><img src="images/home.png width="126" height="100" /></a>
-</div>
+	<a class="active" href="index.html"><img src="images/home.png" 126" height="100"/></a>
 	
 	
 <h1>The Glow Recipe</h1>
