--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 
 <body>
 
+	<div class="topnav"></div>
+
 	<a class="active" href="index.html"><img src="images/home.png" 126" height="100"/></a>
 	<a class="active" href="shop.html"><img src="images/shopnow.png" 126" height="100"/></a>
 	<a class="active" href="aboutus.html"><img src="images/aboutus.png" 126" height="100"/></a>
 	<a class="active" href="contactus.html"><img src="images/contact.png" 126" height="100"/></a>
 	
+    </div> 
 	
 <h1>The Glow Recipe</h1>
 <br>
