--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 </head>
 
 <body>
-
-	<div class="topnav"></div>
-
-	<a class="active" href="index.html"><img src="images/home.png" 126" height="100"/></a>
-	<a class="active" href="shop.html"><img src="images/shopnow.png" 126" height="100"/></a>
-	<a class="active" href="aboutus.html"><img src="images/aboutus.png" 126" height="100"/></a>
-	<a class="active" href="contactus.html"><img src="images/contact.png" 126" height="100"/></a>
-	
-    </div> 
+	<nav>
+		<ul>
+		  <li><a href="#"><img class="nav-img" src="images/home.png" alt="Home"></a></li>
+		  <li><a href="#"><img class="nav-img" src="images/aboutus.png" alt="About"></a></li>
+		  <li><a href="#"><img class="nav-img" src="images/shopnow.png" alt="Shop"></a></li>
+		  <li><a href="#"><img class="nav-img" src="images/contact.png" alt="Contact"></a></li>
+		</ul>
+	  </nav>
 	
 <h1>The Glow Recipe</h1>
 <br>
